# 5gsitl

./: .env.example  README.md  pyproject.toml  requirements.txt
adapters/: __init__.py  file_state_adapter.py  omnetpp_metrics_adapter.py  omnetpp_slice_adapter.py  omnetpp_state_adapter.py  omnetpp_testcase_adapter.py  schema.py
docs/: architecture.md  deployment_topologies.md  huong_dan_su_dung_vi.md  huong_dan_thi_nghiem_va_danh_gia_vi.md  network_slicing.md  nr_experiments.md  observability.md  omnetpp_gui.md  phy_testcases.md  runtime_compat_attach_baseline.md  sitl_design.md  testplan.md  troubleshooting.md  wireshark_guide.md
gnuradio/: channel_emulator.grc  channel_emulator.py  load_profile.py  runner.py
infra/: docker-compose.yml  healthcheck_helpers.sh  host_tuning.sh  nat_forwarding.sh  netem_helper.sh  network_setup.sh
omnetpp/: README.md  build.sh
scripts/: bootstrap_ubuntu_sitl.sh  capture_common.sh  capture_host_bridge.sh  capture_n2.sh  capture_n3.sh  capture_upf_dn.sh  check_attach.sh  collect_logs.sh  common.sh  export_results.sh  healthcheck.sh  install_dependencies.sh  rebuild_srsran_compat.sh  restart_component.sh  run_nr_experiment.sh  run_ping_test.sh  run_runtime_demo.sh  run_slice_usecase.sh  run_testcase.sh  run_udp_latency_test.sh  setup_host_network.sh  start_adapters.sh  start_all.sh  start_capture.sh  start_channel.sh  start_core.sh  start_gnb.sh  start_omnetpp_gui.sh  start_ue.sh  stop_all.sh  stop_capture.sh
tests/: test_integration_scaffold.py  test_pcap_analyzer.py  test_provision_subscribers.py  test_run_testcase.py  (+2 more)
(+83 files in other folders)
